k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cats-service
spec:
  selector:
    app: cats-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
